# DataFrame

./: CMakeLists.txt  README.md
include/: column_type.h  dataframe.h  series.h
src/: aggregate.c  combine.c  core.c  date.c  dftime.c  indexing.c  io.c  main.c  makefile  myprogram  plot.c  print.c  query.c  reshape.c  series.c
src/DataFrame/: dataframe.h  dataframe_core.c  dataframe_date.c  dataframe_print.c
src/DataFrame/aggregate/: dataframe_aggregate.c  dataframe_aggregate_test.c
src/DataFrame/combine/: dataframe_combine.c  dataframe_combine_test.c  dataframe_combine_test.h
src/DataFrame/core/: dataframe_core.c  dataframe_core_test.c
src/DataFrame/csv/: dataframe_csv.c  dataframe_csv_test.c  dataframe_csv_test.h
src/DataFrame/date/: dataframe_date.c  dataframe_date_test.c
src/DataFrame/indexing/: dataframe_indexing.c  dataframe_indexing_test.c
src/DataFrame/io/: dataframe_io.c  dataframe_io_test.c  dataframe_io_test.h
src/DataFrame/plot/: dataframe_plot.c  dataframe_plot_test.c  dataframe_plot_test.h
src/DataFrame/print/: dataframe_print.c  dataframe_print_test.c  dataframe_print_test.h
src/DataFrame/query/: dataframe_query.c  dataframe_query_test.c  dataframe_query_test.h
src/DataFrame/reshape/: dataframe_reshape.c  dataframe_reshape_test.c  dataframe_reshape_test.h
src/Series/: series.c  series.h
src/Tools/: column_type.h  time.c  time.h
tests/: CMakeLists.txt  aggregate_test.c  combine_test.c  core_test.c  date_test.c  df_test_runner.c  indexing_test.c  io_test.c  plot_test.c  print_test.c  query_test.c  reshape_test.c
tests/include/: aggregate_test.h  core_test.h  date_test.h  indexing_test.h
